--- a/.vscodeignore
+++ b/.vscodeignore
@@ -8,3 +8,11 @@ vsc-extension-quickstart.md
 **/.eslintrc.json
 **/*.map
 **/*.ts
+node_modules/**
+__pycache__/**
+tests/**
+*.md
+!README.md
+!CHANGELOG.md
+*.vsix
+.git/**
