--- a/package.json
+++ b/package.json
@@ -1,18 +1,30 @@
 {
-  "name": "discord-component-preview",
-  "displayName": "Discord Component Preview",
-  "description": "Preview discord.py ComponentV2 (Buttons, SelectMenus, etc.) in VS Code",
+  "name": "dpy-component-preview",
+  "displayName": "Component Preview for discord.py",
+  "description": "Visual builder and preview for discord.py v2.6+ LayoutView/ComponentV2 (Buttons, SelectMenus, etc.) in VS Code",
   "version": "0.2.0",
   "publisher": "kousakirai",
+  "author": {
+    "name": "kousakirai"
+  },
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kousakirai/component-v2-emulator"
+    "url": "https://github.com/kousakirai/component-v2-emulator.git"
   },
   "homepage": "https://github.com/kousakirai/component-v2-emulator#readme",
   "bugs": {
     "url": "https://github.com/kousakirai/component-v2-emulator/issues"
   },
+  "keywords": [
+    "python",
+    "discord.py",
+    "ui",
+    "components",
+    "preview",
+    "layoutview"
+  ],
+  "qna": false,
   "engines": {
     "vscode": "^1.80.0"
   },
@@ -150,5 +162,8 @@
     "glob": "^13.0.0",
     "mocha": "^11.7.5",
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@vscode/vsce": "^3.7.1"
   }
 }
